--- a/module/Lmpe/view/lmpe/lmpe/index.phtml
+++ b/module/Lmpe/view/lmpe/lmpe/index.phtml
@@ -1,41 +1,44 @@
-    <!doctype html>
-    <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    </head>
-    <body>
+<br /><br /><br />
 
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img src="img/1.jpg" alt="...">
-          </div>
-          <div class="item">
-            <img src="img/2.jpg" alt="...">
-          </div>
-          <div class="item">
-            <img src="img/3.jpg" alt="...">
-          </div>
-        </div>
+<div id="article_prototype_grid">
 
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+  <div class="col-md-3">
+    <div class="grid_syst teal">
+        <img src="sl/1.jpg" height="70%" width="100%">
+        <h5 class="text-center">titre de l'article</h5>
+        <p class="" style="float: left; margin-right:10px;">article hint content...</p>
+        <a href="#" class="btn btn-primary red btn-sm">read more</a>
+    </div>
+  </div>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    </body>
+  <div class="col-md-3">
+    <div class="grid_syst teal">
+       <img src="sl/2.jpg" height="70%" width="100%">
+       <h5 class="text-center">titre de l'article</h5>
+       <p class="" style="float: left; margin-right:10px;">article hint content...</p>
+       <a href="#" class="btn btn-primary red btn-sm">read more</a>
+    </div>
+  </div>
+
+  <div class="col-md-3">
+    <div class="grid_syst teal">
+        <img src="sl/3.jpg" height="70%" width="100%">
+        <h5 class="text-center">titre de l'article</h5>
+        <p class="" style="float: left; margin-right:10px;">article hint content...</p>
+        <a href="#" class="btn btn-primary red btn-sm">read more</a>
+    </div>
+  </div>
+
+  <div class="col-md-3">
+    <div class="grid_syst teal">
+        <img src="sl/4.jpg" height="70%" width="100%">
+        <h5 class="text-center">titre de l'article</h5>
+        <p class="" style="float: left; margin-right:10px;">article hint content...</p>
+        <a href="#" class="btn btn-primary red btn-sm">read more</a>
+    </div>
+  </div>
+
+</div>
+<br/><br/>
+
