--- a/module/Lmpe/view/lmpe/lmpe/login.phtml
+++ b/module/Lmpe/view/lmpe/lmpe/login.phtml
@@ -1,1 +1,24 @@
-this is login
+<br/><br/><br/><br/>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-4" style="background-color:#2A3744;border-radius: 5px;">
+			<form role="forme" class="form-group" method="post" action="Backend/actions/users/loginUser.php">
+				<div class="form-group">
+					<label for="email" class="control-label">Adress email : </label>
+					<input type="email" name="email" class="form-control" required placeholder="votre email..."/>
+				</div>
+
+				<div class="form-group">
+					<label for="email" class="control-label">Password : </label>
+					<input type="password" name="password" class="form-control" required placeholder="votre mot de passe..."/>
+				</div>
+
+				<button id="btnLogin" type="submit" class="btn btn-primary center-block">Login</button>
+			</form>  
+		</div>
+		<div class="col-md-4"></div>
+	</div>
+</div>
+<br/>
+
