--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,4 @@
 @charset "utf-8";
-/* CSS Document */
-
-body{
-	padding:0px;
-	margin:0px;
-	width:100%;
-}
 
 #conteneur{
 	margin:auto;
@@ -60,7 +53,7 @@ body{
 
 #menu{
 	background-color:#212a34;
-	z-index:1;
+	z-index:990;
 }
 
 #top{
@@ -70,10 +63,6 @@ body{
 	position:fixed;
 	z-index:1;
 }
-
-
-
-
 
 #text_rech{
 	width:170px;
@@ -97,19 +86,21 @@ body{
 	list-style:none;
 	margin-left:50px;
 }
+
 #band_newsletter button{
 	width:100%;
 }
+
 #recherche{
 	margin-top:10px;
 }
+
 #content{
 	margin-top:30px;
 	margin-left:106px;
 	margin-right:106px;
 	height:473px;
 }
-
 
 #contact{
 	position:relative;
@@ -148,15 +139,32 @@ body{
 	height:auto;
 }
 #footer{
-
 	background-color:#212a34;
 	width:100%;
 }
 #up_btn{margin-bottom:auto;
 }
+
+
+  .affix {
+      top:0;
+      width: 100%;
+      z-index: 9999 !important;
+  }
+  .navbar {
+      margin-bottom: 0px;
+  }
+
+  .affix ~ .container-fluid {
+     position: relative;
+     top: 50px;
+  }
+
+
 body{
 	margin:0px;
-	padding:0px;
+	padding:0px; 
+	position: relative; 
 	width:100%;
 	background:url(../img/bg.png) no-repeat center center fixed;
 	-webkit-background-size: cover;
@@ -216,5 +224,57 @@ body{
 	width:100%;
 	height:598px;
 	margin:auto;
+}
+
+#visitor_counter{
+	left: 0px;
+	width: 5px;
+	height: 20px;
+	background-color: grey;
+	z-index: 9999;
+	position:  fixed;
+	top: 54px;
+	border-radius: 0px 7px 7px 0px;
+}
+#visitor_counter p{
+ display: none;
+
+}
+
+#visitor_counter:hover p{
+ display:block;
+}
+
+#visitor_counter:hover{
+	animation:anim_visitor 1s;
+	animation-timing-function: ease;
+	width: 120px;
+	animation:bg_coloring 1s infinite;
+}
+@keyframes anim_visitor{
+	from{width: 5px;}
+	to{width: 120px;}
+}
+@keyframes bg_coloring{
+	from{background-color:white;}
+	to{background-color:blue;}
+}
+
+ .grid_syst{
+   margin-top: 10px;
+   padding: 5px;
+   height: 300px;
+ }
+
+ .grid_syst:hover{
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.32),0 5px 15px 0 rgba(0,0,0,0.24);
+ }
+
+@media (min-width: 990px) {
+   #article_prototype_grid{
+	   width: 99%;
+	   margin:auto;
+	   margin-bottom:300px;
+   }	
 }
 
